fix(deployment) exit without error when there are no tests

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "description": "linc sony demo product page",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"No tests yet\"" 
   },
   "repository": {
     "type": "git",
